<resources>
    <string name="app_name">DateVenture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="adventure_waits">ADVENTURE WAITS</string>
    <string name="adventure_starts">ADVENTURE STARTS</string>
    <string name="name_register">Name</string>
    <string name="email_register">Email</string>
    <string name="phone_register">Phone number</string>
    <string name="password_register">Password</string>
    <string name="Re_password_register">Confirm Password</string>
    <string name="start_banner">Banner_de_DATEVENTURE</string>
    <string name="logo">Logo_DateVenture</string>
    <string name="acuarela">Acuarela_DateVenture</string>


    <string name="button_signin">Sign In</string>
    <string name="button_login">Log In</string>

    <string name="imagen_para_fondo">imagen de fondo</string>
    <string name="imagen_acuarela">imagen de acuarela roja</string>
    <string name="imagen_acuarela2">imagen de acuarela roja 2</string>
    <string name="imagen_fondo_desc">Es acuarela y tiene color rojo</string>

    <string name="icon_del_perfil">Es un icono que contiene la foto del usuario</string>
    <string name="logo_de_dateadventure">Es un logo que contiene el nombre dateadventure y un eslogan que dice"donde cada cita es una aventura inolvidable</string>
    <string name="icon_conectar_pareja">icono de conectarse o entrelazar cuentas</string>
    <string name="images_citas">Imagen que contiene algunas emocionantes citas que podrías tener</string>
    <string name="image_mapa_animado">Contiene un mapa animado</string>
    <string name="image_cartel">Contiene un cartel que dice "lets go adventure</string>
    <string name="btn_bond_with_your_partner">Bond with your partner</string>
    <string name="btn_crea_cita">plan your romantic date</string>
    <string name="username">NOMBRE USUARIO</string>
    <string name="hi_welcome">HI, WELCOME</string>

    <string name="complete_questions">COMPLETE THE QUESTIONS FOR THE DAY OF YOUR DREAMS</string>
    <string name="What_hobbies">TELL US ABOUT YOURSELF</string>
    <string name="prefer_date">WHAT DO YOU PREFER FOR YOUR DATE?</string>
    <string name="btn_restaurants">FOOD PREFERENCES</string>
    <string name="btnTravel">TRAVEL</string>
    <string name="btn_home">HOME</string>
    <string name="btn_green_spaces">GREEN SPACES</string>
    <string name="images_citas2">Imagen con hobbies</string>


    <string name="food_preferences">FOOD PREFERENCES</string>
    <string name="brazilian_preference">Brazilian</string>
    <string name="Colombian_preference">Colombian</string>
    <string name="image_food">Imagen con hobbies</string>
    <string name="italian_preference">Italian</string>
    <string name="fast_food_preference">Fast Food</string>
    <string name="Other_preference">Others</string>

    <string name="Travel_preferences">TRAVEL PREFERENCES</string>
    <string name="italia_check">ITALIA</string>
    <string name="brasil_check">BRASIL</string>
    <string name="mexico_check">MEXICO</string>
    <string name="argentina_check">ARGENTINA</string>
    <string name="image_travel">imagen de mapa de colombia</string>


    <string name="desc_home">HOME</string>
    <string name="show">TV SHOWS</string>
    <string name="craft">CRAFTS</string>
    <string name="cook">COOK</string>
    <string name="Games">VIDEO GAMES</string>


    <string name="desc_green">GREEN PLACES</string>
    <string name="eat">EAT</string>
    <string name="extreme">EXTREME SPORTS</string>
    <string name="camp">TO CAMP</string>
    <string name="bike">BIKE RIDE</string>
    <string name="image_green">Imagen de dos personas al aire libre:)</string>


    <string name="desc_connect">CONNECT WITH YOUR DATE</string>
    <string name="image_date">Contiene imagen para entrelazar parejas</string>
    <string name="text_put">PUT THE USERNAME</string>
    <string name="write_username">search Username</string>
    <string name="btn_buscar_username">search username</string>
    <string name="successful">SUCCESSFUL CONNECTION!</string>
    <string name="fail">FAILED CONNECTION!</string>

    <string name="Back">BACK</string>
    <string name="Continue">CONTINUE</string>

</resources>