<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/howCompleteQuestions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCECCC"
    android:contentDescription="@string/imagen_para_fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/acuarela1arriba"
        android:layout_width="417dp"
        android:layout_height="238dp"
        android:contentDescription="@string/imagen_acuarela"
        android:src="@drawable/acuarela_dateventure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/acuarela2abajo"
        android:layout_width="407dp"
        android:layout_height="235dp"
        android:contentDescription="@string/imagen_acuarela2"
        android:src="@drawable/acuarela_dateventure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acuarela1arriba"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_weight="0.606" />

    <ImageView
        android:id="@+id/logoDateVenture"
        android:layout_width="176dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@mipmap/logo_launcher_foreground" />

    <TextView
        android:id="@+id/describeComoCompletar"
        android:layout_width="252dp"
        android:layout_height="105dp"
        android:layout_marginEnd="16dp"
        android:text="@string/complete_questions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/preguntasSiguientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/What_hobbies"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="389dp"
        android:layout_height="56dp"
        android:text="@string/prefer_date"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imagenCitas2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/preguntasSiguientes"
        app:layout_constraintVertical_bias="0.82" />

    <ImageView
        android:id="@+id/imagenCitas2"
        android:layout_width="353dp"
        android:layout_height="360dp"
        android:text="@string/images_citas2"
        app:layout_constraintBottom_toBottomOf="@+id/acuarela2abajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imageshobbies" />

    <Button
        android:id="@+id/btnRestaurants"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginStart="44dp"
        android:text="@string/btn_restaurants"
        app:layout_constraintBottom_toTopOf="@+id/butnHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenCitas2"
        app:layout_constraintVertical_bias="0.451" />

    <Button
        android:id="@+id/btnTravel"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnTravel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toEndOf="@+id/btnRestaurants"
        app:layout_constraintTop_toBottomOf="@+id/imagenCitas2" />

    <Button
        android:id="@+id/butnHome"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGreenPlaces"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGreenPlaces"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginEnd="24dp"
        android:text="@string/btn_green_spaces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTravel"
        app:layout_constraintVertical_bias="0.313" />


</androidx.constraintlayout.widget.ConstraintLayout>

