<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/howCompleteQuestions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCECCC"
    android:contentDescription="@string/imagen_para_fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/acuarela1arriba"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/imagen_acuarela"
        android:src="@mipmap/acuarelaimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/acuarela2abajo"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagen_acuarela2"
        android:src="@mipmap/acuarelaimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acuarela1arriba"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_weight="0.606" />

    <ImageView
        android:id="@+id/logoDateVenture"
        android:layout_width="176dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        app:srcCompat="@mipmap/logodateadventure" />

    <TextView
        android:id="@+id/describeComoCompletar"
        android:layout_width="238dp"
        android:layout_height="115dp"
        android:layout_marginEnd="16dp"
        android:text="@string/complete_questions"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/preguntasSiguientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/What_hobbies"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prefer_date"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imagenCitas2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/preguntasSiguientes"
        app:layout_constraintVertical_bias="0.911" />

    <ImageView
        android:id="@+id/imagenCitas2"
        android:layout_width="314dp"
        android:layout_height="316dp"
        android:text="@string/images_citas2"
        app:layout_constraintBottom_toBottomOf="@+id/acuarela2abajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/cosasparahacer" />

    <Button
        android:id="@+id/btnRestaurants"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:background="@color/amarillo_personalizado"
        android:text="@string/btn_restaurants"
        app:layout_constraintBottom_toTopOf="@+id/butnHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenCitas2"
        app:layout_constraintVertical_bias="0.569" />

    <Button
        android:id="@+id/btnTravel"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@color/amarillo_personalizado"
        android:text="@string/btnTravel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toEndOf="@+id/btnRestaurants"
        app:layout_constraintTop_toBottomOf="@+id/imagenCitas2" />

    <Button
        android:id="@+id/butnHome"
        android:layout_width="137dp"
        android:layout_height="54dp"
        android:layout_marginBottom="48dp"
        android:background="@color/amarillo_personalizado"
        android:text="@string/btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnGreenPlaces"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGreenPlaces"
        android:layout_width="137dp"
        android:layout_height="52dp"
        android:layout_marginEnd="44dp"
        android:background="@color/amarillo_personalizado"
        android:text="@string/btn_green_spaces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTravel"
        app:layout_constraintVertical_bias="0.428" />


</androidx.constraintlayout.widget.ConstraintLayout>