<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arena"
    tools:context=".Cuestionario">

    <ImageView
        android:id="@+id/acuarela1arriba"
        android:layout_width="417dp"
        android:layout_height="238dp"
        android:contentDescription="@string/imagen_acuarela"
        android:src="@drawable/acuarela_dateventure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/describeComoCompletar"
        android:layout_width="252dp"
        android:layout_height="105dp"
        android:text="@string/complete_questions"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/acuarela1arriba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/acuarela1arriba" />

    <TextView
        android:id="@+id/preguntasSiguientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:text="@string/What_hobbies"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="391dp"
        android:layout_height="37dp"
        android:text="@string/prefer_date"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/imagenCitas2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/preguntasSiguientes"
        app:layout_constraintVertical_bias="0.82" />

    <ImageView
        android:id="@+id/imagenCitas2"
        android:layout_width="353dp"
        android:layout_height="360dp"
        android:contentDescription="@string/images_citas2"
        android:text="@string/images_citas2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imageshobbies" />

    <Button
        android:id="@+id/btnRestaurants"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_rounded"
        android:text="@string/food_preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenCitas2" />

    <Button
        android:id="@+id/btnTravel"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btnTravel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenCitas2" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btn_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRestaurants" />

    <Button
        android:id="@+id/btnGreenPlaces"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/button_rounded"
        android:text="@string/btn_green_spaces"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTravel" />

</androidx.constraintlayout.widget.ConstraintLayout>